Fix canonical control-flow review findings